<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bags"
            android:icon="@drawable/baseline_shopping_bag_24"
            android:title="@string/menu_bags" />
        <item
            android:id="@+id/nav_create_product"
            android:icon="@drawable/outline_apparel_24"
            android:title="@string/menu_create_product" />
        <item
            android:id="@+id/nav_register_customer"
            android:icon="@drawable/outline_face_24"
            android:title="@string/menu_register_client" />

        <item
            android:id="@+id/nav_insert_sales"
            android:icon="@drawable/outline_attach_money_24"
            android:title="@string/menu_sales" />
    </group>
</menu>