<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bags">

    <fragment
        android:id="@+id/nav_bags"
        android:name="com.example.projetobrecho20.view.ListBagsFragment"
        android:label="@string/menu_bags"
        tools:layout="@layout/fragment_list_bags" />

    <fragment
        android:id="@+id/nav_create_product"
        android:name="com.example.projetobrecho20.view.CreateProductFragment"
        android:label="@string/menu_create_product"
        tools:layout="@layout/fragment_create_product" />

    <fragment
        android:id="@+id/nav_register_customer"
        android:name="com.example.projetobrecho20.view.RegisterCustomerFragment"
        android:label="@string/menu_register_client"
        tools:layout="@layout/fragment_register_customer" />

    <fragment
        android:id="@+id/nav_insert_sales"
        android:name="com.example.projetobrecho20.view.InsertSalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_insert_sales" />

    <fragment
        android:id="@+id/nav_bag_details"
        android:name="com.example.projetobrecho20.view.BagDetailsFragment"
        android:label="Detalhes da Sacola"
        tools:layout="@layout/fragment_bag_details" />
</navigation>