<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateProductFragment" >

    <TextView
        android:id="@+id/createProductTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="36dp"
        android:text="@string/create_product_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/registerClientLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/registerClientLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="334dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/productDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/product_description_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/productPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/product_price_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/productCostEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/product_cost_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

            <RadioGroup
                android:id="@+id/stockTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/uniqueStockRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unique_stock_text_radio"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/MultipleStockRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/multiple_stock_text_radio"
                    tools:ignore="VisualLintButtonSize" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <Button
                android:id="@+id/createProductButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCreateProductButtonClick"
                android:text="@string/create_product_button_text"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>