<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InsertSalesFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/insertSalesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="@string/insert_sales_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clientTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_title_text"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/customersSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_details_product_title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_products_subtitle_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:ignore="TextSizeCheck">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BagTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_status_title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hasActiveBagTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@android:string/untitled" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="12dp" />

                <Button
                    android:id="@+id/createBagButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_bag_button_text" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="36dp" />

                <Button
                    android:id="@+id/insertSalesButton"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/insert_sales_button_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>